Updated the list matching logic, fixed styles

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,8 +1,8 @@
 
 @import "node_modules/bootstrap/scss/bootstrap";
 
-@import './base/variables.scss';
-@import './base/mixins.scss';
-@import './base/fonts.scss';
-@import './base/layout.scss';
-@import './lesson-block-connect.scss';
+@import 'base/variables.scss';
+@import 'base/mixins.scss';
+@import 'base/fonts.scss';
+@import 'base/layout.scss';
+@import 'lesson-block-connect.scss';
